crates/laplace-macro/tests/ui/fail/verify_threads_type.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(threads = "2")]
async fn threads_type() {}

fn main() {}
