crates/laplace-macro/tests/ui/fail/verify_threads_type.stderr
error: expected integer literal for `threads`
 --> tests/ui/fail/verify_threads_type.rs:3:43
  |
3 | #[laplace_macro::laplace_verify(threads = "2")]
  |                                           ^^^
